# spectre-rad

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  test_batch.sh
aligned/: balance.sh
benchmarks/: committee.pb  step.pb
bls12_381/: Cargo.toml
bls12_381/src/hash_to_curve/: expand_msg.rs  map_g1.rs
circuits/: Cargo.toml
circuits/elf/: riscv32im-succinct-zkvm-elf
circuits/recursive-step/: Cargo.toml
circuits/recursive-step/src/: main.rs
circuits/rz-committee/: Cargo.toml
circuits/rz-committee/committee-circuit/: Cargo.toml
circuits/rz-committee/committee-circuit/circuit/: Cargo.toml
circuits/rz-committee/committee-circuit/circuit/src/: main.rs
circuits/rz-step/: Cargo.toml
circuits/rz-step/step-circuit/: Cargo.toml
circuits/rz-step/step-circuit/circuit/: Cargo.toml
circuits/rz-step/step-circuit/circuit/src/: main.rs
circuits/sp1-aggregate/: Cargo.toml
circuits/sp1-aggregate/src/: main.rs
circuits/sp1-committee/: Cargo.toml
circuits/sp1-committee-wrapped/: Cargo.toml
circuits/sp1-committee-wrapped/src/: main.rs
circuits/sp1-committee/src/: main.rs
circuits/sp1-recursive-step/: Cargo.toml
circuits/sp1-recursive-step/src/: main.rs
circuits/sp1-rotation/: Cargo.toml
circuits/sp1-rotation/src/: main.rs
circuits/sp1-step/: Cargo.toml
circuits/sp1-step-wrapped/: Cargo.toml
circuits/sp1-step-wrapped/src/: main.rs
circuits/sp1-step/src/: main.rs
committee-iso/: Cargo.toml
committee-iso/src/: lib.rs  main.rs  types.rs  utils.rs
elf/: riscv32im-succinct-zkvm-elf
eth-types/: Cargo.toml
eth-types/src/: lib.rs
iso-aggregate/: Cargo.toml
iso-aggregate/src/: types.rs
iso-committee/: Cargo.toml
iso-committee/src/: constants.rs  lib.rs  types.rs  utils.rs
iso-rotation/: Cargo.toml
iso-rotation/src/: types.rs
iso-step/: Cargo.toml
iso-step/src/: lib.rs  types.rs  utils.rs
preprocessor/: Cargo.toml
preprocessor/src/: lib.rs  rotation.rs  step.rs  unit_test_gen.rs
profiles/risc0-committee/: borsh-optimized.pb  profile.pb
prover/: Cargo.toml  build.rs  groth16-fixture.json  plonk-fixture.json  start.sh
prover/src/: aligned.rs  api.rs  client.rs  eth.rs  fixture.rs  lib.rs  main.rs
prover/src/aligned/: storage.rs
prover/src/api/: types.rs
prover/src/integrations/aligned/: README.md  constants.rs
prover/tests/: aligned.rs  integration.rs  proofs.rs
spectre-verifier/: .env.example  deploy.sh  foundry.toml  verify.sh
spectre-verifier/broadcast/Deploy.s.sol/11155111/: run-1737585061.json  run-1737586932.json  run-1737590462.json  run-1737727093.json  run-1737728125.json  run-1737772789.json  run-1737811836.json  run-1738086325.json  run-1738135441.json  run-1738137085.json  run-1738137241.json  run-1738511858.json  run-1738534128.json  run-1738534657.json  run-latest.json
spectre-verifier/cache/: solidity-files-cache.json  test-failures
spectre-verifier/lib/sp1-contracts/contracts/src/: SP1VerifierGateway.sol
spectre-verifier/lib/sp1-contracts/contracts/test/: SP1VerifierGateway.t.sol
spectre-verifier/script/: Deploy.s.sol
spectre-verifier/src/: Fixture.sol  Verifier.sol
spectre-verifier/test/: Verifier.t.sol
spectre-verifier/test/fixtures/: rotation-groth16.json  step-groth16.json
step-iso/: Cargo.toml
step-iso/src/: lib.rs  types.rs  utils.rs
