[workspace]
resolver = "2"
members = [
    "iso-committee",
    "prover",
    "iso-step",
    "circuits/sp1-step",
    "circuits/sp1-committee",
    "preprocessor",
    "eth-types",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
