[workspace]
resolver = "2"
members = [
    "iso-committee",
    "prover",
    "iso-step",
    "circuits/sp1-step",
    "circuits/sp1-rotation",
    "preprocessor",
    "eth-types",
    "iso-rotation",
]

default-members = ["prover"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[workspace.dependencies]
sp1-helper = "4.0.1"
sp1-sdk = { version = "4.0.1", features = ["native-gnark"] }
sp1-derive = "4.0.1"
sp1-zkvm = "4.0.1"

[profile.release]
debug = 1
lto = true
