[package]
name = "committee-iso"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
itertools = "0.13.0"
num-bigint = "0.4.6"
hex = "0.4.3"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "5f1ec833718efa07bbbff427ab28a1eeaa706164" }
sha2 = { version = "0.10.8", optional = true }
sha2_risc0 = { package = "sha2", git = "https://github.com/jonas089/risc0-precompiles", optional = true }
sha2_sp1 = { package = "sha2", git = "https://github.com/sp1-patches/RustCrypto-hashes", optional = true }

[features]
default = ["sha2"]
risc0 = ["sha2_risc0"]
sp1 = ["sha2_sp1"]
