[package]
name = "committee-iso"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
itertools = "0.13.0"
num-bigint = "0.4.6"
hex = "0.4.3"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ssz_rs = { git = "https://github.com/jonas089/ssz-rs-patched" }
sha2 = { git = "https://github.com/RustCrypto/hashes/", rev = "9df20e865c3d141526074568984ba21a99429ea1" }
sha2_risc0 = { package = "sha2", git = "https://github.com/risc0/RustCrypto-hashes", optional = true }
#sha2_sp1 = { package = "sha2", git = "https://github.com/sp1-patches/RustCrypto-hashes", optional = true, rev = "d8b088aece5659cecdce397ce48d6129b6c4c440" }

[features]
risc0 = ["sha2_risc0"]
#sp1 = ["sha2_sp1"]
