[package]
name = "committee-iso"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
borsh = { version = "1.5.3", features = ["derive"] }
lazy_static = "1.5.0"
itertools = "0.13.0"
num-bigint = "0.4.6"
hex = "0.4.3"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ssz_rs = { git = "https://github.com/jonas089/ssz-patched-crates" }
sha2 = { package = "sha2", git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.9.9-sp1-4.0.0-rc.3" }
alloy-sol-types = "0.8.18"
