[package]
name = "step-iso"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
borsh = { version = "1.5.3", features = ["derive"] }
itertools = "0.13.0"
committee-iso = { path = "../iso-committee" }
ssz_rs = { git = "https://github.com/jonas089/ssz-patched-crates" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.9.9-sp1-4.0.0-rc.3" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0", features = [
    "experimental",
] }
sp1-derive = { workspace = true }
alloy-sol-types = "0.8.18"
