[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

[lib]
name = "preprocessor"
path = "src/lib.rs"

[[bin]]
name = "unit-test-gen"
path = "src/unit_test_gen.rs"
required-features = ["test-gen"]


[dependencies]
ssz_rs = { git = "https://github.com/jonas089/ssz-rs-patched", branch = "borsh" }
group = "0.13"
beacon-api-client = { git = "https://github.com/jonas089/ethereum-consensus-patched.git" }
step-iso = { path = "../iso-step" }
committee-iso = { path = "../iso-committee" }
# misc
eyre = "0.6"
tokio = { version = "1", features = ["full"] }

hex = "0.4"
log = "0.4.14"
itertools = "0.12.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.78"
ethereum-consensus-types = { git = "https://github.com/jonas089/ethereum-consensus-types-patched", features = [
    "serde",
] }

# local
eth-types = { path = "../eth-types" }
reqwest = "0.11.22"

# for test gen binary
ethereum-consensus = { git = "https://github.com/jonas089/ethereum-consensus-patched.git", optional = true }
blst = { version = "0.3.11", default-features = false, features = [
    "portable",
    "no-threads",
], optional = true }

[features]
test-gen = ["ethereum-consensus", "blst"]
