[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
committee-circuit = { path = "../circuits/rz-committee/committee-circuit" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
committee-iso = { path = "../committee-iso" }
