
[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
committee-circuit = { path = "../circuits/rz-committee/committee-circuit" }
step-circuit = { path = "../circuits/rz-step/step-circuit" }
risc0-zkvm = "1.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1"
committee-iso = { path = "../iso-committee" }
step-iso = { path = "../iso-step" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.9.2" }
hex = "0.4.0"
rpassword = "7.3.1"
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "eip712",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
tokio = { version = "1.40.0", features = ["full"] }
bincode = "1.3.3"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32" }
sp1-sdk = "3.0.0"
borsh = { version = "1.5.3", features = ["derive"] }


[build-dependencies]
sp1-helper = "3.0.0"

[features]
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
