[package]
version = "0.1.0"
name = "sp1-aggregate"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true, features = ["verify"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bls12_381_sp1 = { package = "bls12_381", path = "../../bls12_381", optional = true, features = [
    "experimental",
] }
itertools = "0.13.0"
committee-iso = { path = "../../iso-committee", features = [
    "sp1",
], default-features = false }
step-iso = { path = "../../iso-step", features = [
    "sp1",
], default-features = false }
bincode = "1.3.3"
borsh = { version = "1.5.3", features = ["derive"] }
alloy-sol-types = "0.8.18"
alloy-primitives = "0.8.18"
sha2_sp1 = { package = "sha2", git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8", optional = true }
