[package]
version = "0.1.0"
name = "sp1-step"
edition = "2021"

[dependencies]
sp1-zkvm = "3.0.0-rc4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381" }
itertools = "0.13.0"
committee-iso = { path = "../../iso-committee", features = [
    "sp1",
], default-features = false }
step-iso = { path = "../../iso-step", features = [
    "sp1",
], default-features = false }
bincode = "1.3.3"
