[package]
name = "rz_committee"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.2.0", default-features = false, features = [
    'std',
] }
committee-iso = { path = "../../../../iso-committee", features = [
    "risc0",
], default-features = false }
bincode = "1.3.3"
borsh = { version = "1.5.3", features = ["derive"] }

[features]
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]
