[package]
name = "rz_step"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.1.2", default-features = true, features = ['std'] }
risc0-zkvm-platform = "=1.1.2"
committee-iso = { path = "../../../../iso-committee", features = [
    "risc0",
], default-features = false }
step-iso = { path = "../../../../iso-step", features = [
    "risc0",
], default-features = false }
bincode = "1.3.3"
